--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@astrojs/renderer-react": "^0.3.1",
+    "@tailwindcss/line-clamp": "^0.3.1",
     "astro": "^0.21.12",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.5",
