--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@example/starter",
+  "name": "@example/minimal",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -9,11 +9,6 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "@astrojs/renderer-react": "^0.3.1",
-    "@tailwindcss/line-clamp": "^0.3.1",
-    "astro": "^0.21.12",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.5"
+    "astro": "^0.25.2"
   }
 }
