--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "autoprefixer": "^10.4.4",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.23"
+  },
+  "dependencies": {
+    "unpoly": "^2.5.2"
   }
 }
