--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "preview": "astro preview"
   },
   "devDependencies": {
+    "@astrojs/react": "0.0.2",
     "astro": "^0.25.2",
     "autoprefixer": "^10.4.4",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.23"
   },
   "dependencies": {
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "unpoly": "^2.5.2"
   }
 }
