--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "sass": "^1.49.11",
     "unpoly": "^2.5.2"
   }
 }
