--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "tailwindcss": "^3.0.23"
   },
   "dependencies": {
+    "blobity": "^0.1.7",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "sass": "^1.49.11",
