--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "tailwindcss": "^3.0.23"
   },
   "dependencies": {
+    "@astrojs/sitemap": "^0.1.0",
     "astro": "^1.0.0-beta.5",
     "motion": "^10.7.2",
     "unpoly": "^2.5.2"
