--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@astrojs/sitemap": "^0.1.0",
+    "@tailwindcss/line-clamp": "^0.4.0",
     "astro": "^1.0.0-beta.5",
     "motion": "^10.7.2",
     "unpoly": "^2.5.2"
