--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/line-clamp": "^0.4.0",
     "astro": "^1.0.0-beta.5",
     "motion": "^10.7.2",
+    "slugify": "^1.6.5",
     "unpoly": "^2.5.2"
   }
 }
