--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
+    "netlify-plugin-minify-html": "^0.3.1",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.23"
   },
