--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,4 @@
-# build output
-dist
-
-# dependencies
 node_modules/
-
-# logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# environment variables
+.DS_store
+dist/
 .env
-.env.production
-
-# macOS-specific files
-.DS_Store
