--- a/package.json
+++ b/package.json
@@ -9,16 +9,7 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.4",
-    "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.23"
-  },
-  "dependencies": {
-    "@astrojs/sitemap": "^0.1.0",
-    "@tailwindcss/line-clamp": "^0.4.0",
-    "astro": "^1.0.0-beta.5",
-    "motion": "^10.7.2",
-    "slugify": "^1.6.5",
-    "unpoly": "^2.5.2"
+    "@astrojs/tailwind": "^0.2.2",
+    "astro": "^1.0.0-beta.61"
   }
 }
