--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "@astrojs/tailwind": "^0.2.2",
     "astro": "^1.0.0-beta.61"
+  },
+  "dependencies": {
+    "@tailwindcss/line-clamp": "^0.4.0"
   }
 }
