--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "astro": "^1.0.0-beta.61"
   },
   "dependencies": {
+    "@astrojs/sitemap": "^0.2.4",
     "@tailwindcss/line-clamp": "^0.4.0",
     "motion": "^10.11.0"
   }
